--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "googleapis": "^152.0.0",
     "mercadopago": "^2.8.0",
     "nodemon": "^3.1.10"
   }
